# gin-vue-admin

./: README.md
server/: .dockerignore  .gitignore  Dockerfile  app.yaml  config.docker.yaml  fly.toml  go.mod  go.sum  go.work.sum  mock_test.go  notes.txt  proxy.py  pyproject.toml  requirements.txt  run.py
server/api/feishu/: feishu_message_sender.py  test_message_v3.py  validate_message.py
server/api/v1/system/: enter.go  sys_alipay.go  sys_transaction.go
server/app/: main.py
server/config/: alipay.yaml
server/initialize/: other.go  router.go
server/model/system/: sys_transaction.go
server/model/system/request/: sys_alipay.go  sys_transaction.go
server/router/system/: enter.go  sys_payment.go
server/service/example/: enter_test.go  exa_breakpoint_continue.go  exa_breakpoint_continue_test.go  exa_customer.go  exa_customer_test.go  exa_file_upload_download.go  exa_file_upload_download_test.go  mock_oss.go  test_helper.go  todo.txt
server/service/system/: enter.go  sys_alipay.go  sys_payment.go
server/utils/upload/: upload.go
web/src/router/: index.js
web/src/view/login/: index.vue
web/src/view/register/: index.vue
