[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gin-vue-admin-proxy"
version = "0.1.0"
description = "FastAPI proxy for gin-vue-admin"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["."]

[project.dependencies]
fastapi = "0.109.2"
uvicorn = "0.27.1"
httpx = "0.26.0"
